--- a/public/output.css
+++ b/public/output.css
@@ -593,8 +593,8 @@ video {
   position: relative;
 }
 
-.top-32 {
-  top: 8rem;
+.top-20 {
+  top: 5rem;
 }
 
 .right-0 {
@@ -605,8 +605,8 @@ video {
   bottom: -7rem;
 }
 
-.top-20 {
-  top: 5rem;
+.top-32 {
+  top: 8rem;
 }
 
 .z-10 {
@@ -637,18 +637,6 @@ video {
   margin-top: 2.5rem;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
 .flex {
   display: flex;
 }
@@ -667,10 +655,6 @@ video {
 
 .h-80 {
   height: 20rem;
-}
-
-.h-40 {
-  height: 10rem;
 }
 
 .w-5\/6 {
@@ -737,11 +721,6 @@ video {
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -757,16 +736,6 @@ video {
   padding-bottom: 0.25rem;
 }
 
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -775,6 +744,11 @@ video {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .text-center {
@@ -805,44 +779,46 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.hover\:bg-white:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-blue-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
 }
 
-.hover\:text-black:hover {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
 @media (min-width: 640px) {
+  .sm\:m-60 {
+    margin: 15rem;
+  }
+
   .sm\:mt-12 {
     margin-top: 3rem;
-  }
-
-  .sm\:mb-10 {
-    margin-bottom: 2.5rem;
-  }
-
-  .sm\:mb-5 {
-    margin-bottom: 1.25rem;
   }
 
   .sm\:mb-3 {
     margin-bottom: 0.75rem;
   }
 
-  .sm\:hidden {
-    display: none;
+  .sm\:mr-60 {
+    margin-right: 15rem;
+  }
+
+  .sm\:ml-60 {
+    margin-left: 15rem;
   }
 
   .sm\:h-3\/4 {
     height: 75%;
+  }
+
+  .sm\:h-2\/4 {
+    height: 50%;
+  }
+
+  .sm\:h-1\/4 {
+    height: 25%;
+  }
+
+  .sm\:h-10 {
+    height: 2.5rem;
   }
 
   .sm\:w-3\/4 {
@@ -853,22 +829,29 @@ video {
     width: 50%;
   }
 
-  .sm\:items-center {
-    align-items: center;
+  .sm\:w-1\/4 {
+    width: 25%;
   }
 
-  .sm\:justify-center {
-    justify-content: center;
+  .sm\:w-20 {
+    width: 5rem;
+  }
+
+  .sm\:w-10 {
+    width: 2.5rem;
+  }
+
+  .sm\:p-40 {
+    padding: 10rem;
+  }
+
+  .sm\:p-60 {
+    padding: 15rem;
   }
 
   .sm\:px-20 {
     padding-left: 5rem;
     padding-right: 5rem;
-  }
-
-  .sm\:px-10 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
   }
 }
 
@@ -895,24 +878,12 @@ video {
     right: -9rem;
   }
 
-  .lg\:mt-28 {
-    margin-top: 7rem;
+  .lg\:mt-10 {
+    margin-top: 2.5rem;
   }
 
   .lg\:mb-0 {
     margin-bottom: 0px;
-  }
-
-  .lg\:mt-60 {
-    margin-top: 15rem;
-  }
-
-  .lg\:mt-24 {
-    margin-top: 6rem;
-  }
-
-  .lg\:mt-10 {
-    margin-top: 2.5rem;
   }
 
   .lg\:h-5\/6 {
