adjusted text on mobile size

--- a/public/output.css
+++ b/public/output.css
@@ -853,6 +853,16 @@ video {
     padding-left: 5rem;
     padding-right: 5rem;
   }
+
+  .sm\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .sm\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
 }
 
 @media (min-width: 768px) {
